src/Style/LoginCodeStyle.scss
* {
    padding: 0;
    margin: 0;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    background: #460044;

}

.display {
    text-align: center;
    margin: 5%;
    background: #460044;

    .input {
        margin: 5px;
        background: #460044;
        width: 30px;
        height: 50px;
        text-align: center;
        font-size: 24px;
        color: white;
        font-weight: bold;
        border-bottom: 5px solid white;
        border-top: hidden;
        border-left: hidden;
        border-right: hidden;
        border-radius: 0;
        outline: 0;

        &:focus{
            border-bottom: 5px solid #e80057;    
        }
    }

    .input-highlight {
        border-bottom: 5px solid #e80057;
    }

    p {
        margin: 10px;
        color: white;
    }
}

